compiler/actonc/test/typeerrors/ex19.act
def f(x,y):
    if x<y:
        return x
    else:
        return x+y

a = f(3,"hej")

