compiler/actonc/test/typeerrors/ex19.golden
Building file test/typeerrors/ex19.act
  Compiling ex19.act for development

ERROR: Error when compiling ex19 module: Type error

Cannot satisfy the following simultaneous constraints for the unknown types t0, t1:

  |
7 |a = f(3,"hej")
  |      ^
The type of the indicated expression (which we call t0) must implement __builtin__.Number

  |
7 |a = f(3,"hej")
  |    ^
f has had its polymorphic type [A(Plus, Ord)] => (x: A, y: A) -> A instantiated to (x: t1, y: t1) -> t1, so t1 must implement __builtin__.Ord

  |
7 |a = f(3,"hej")
  |    ^
f has had its polymorphic type [A(Plus, Ord)] => (x: A, y: A) -> A instantiated to (x: t1, y: t1) -> t1, so t1 must implement __builtin__.Plus

  |
1 |def f(x,y):
  |    ^


  |
7 |a = f(3,"hej")
  |    ^^^^^^^^^^
Type incompatibility between definition of and call of f (t0 must be a subtype of t1)

  |
1 |def f(x,y):
  |    ^


  |
7 |a = f(3,"hej")
  |    ^^^^^^^^^^
Type incompatibility between definition of and call of f (__builtin__.str must be a subclass of t1)

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

